# scanner-project

./: .gitignore  CLAUDE.md  CLAUDEwin.md  README.md  devlog.md  scanner-guide-obsidian-v3.md
cpp/: CMakeLists.txt
cpp/include/scanner/: mesh_repair.h  point_cloud.h  print_preparation.h  triangle_mesh.h  types.h
cpp/python/: bindings.cpp
cpp/src/: mesh_repair.cpp  ply_io.h  point_cloud.cpp  print_preparation.cpp  triangle_mesh.cpp
cpp/tests/: demo_synthetic.cpp  test_mesh_repair.cpp  test_point_cloud.cpp  test_print_preparation.cpp  test_triangle_mesh.cpp
docs/: colmap-cli-reference.md  dbscan-algorithm.md  fastapi-quickstart.md  open3d-mesh-api.md  open3d-pointcloud-api.md  opencv-video-api.md  ply-format-spec.md  pybind11-basics.md  stl-format-spec.md  threejs-loaders.md  trimesh-api.md
experiments/: analyze_results.py  demo_extractor.py  run_experiments.py
experiments/results/: cleaned.ply  synthetic.ply
python/: desktop.py  desktop_api.py  pyproject.toml
python/api/: db.py  run.py  server.py  websocket.py
python/scanner/: __init__.py  cli.py  colmap_diagnostics.py  colmap_runner.py  config.py  exporter.py  mesh_processor.py  pipeline.py  video_extractor.py
python/tests/: test_colmap_runner.py  test_db.py  test_server_load.py  test_video_extractor.py
scripts/: fetch_vendor.ps1  run_desktop.ps1  run_e2e_test.py
web/: index.html  manifest.json
web/css/: style.css
web/js/: app.js  viewer.js
