[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanner"
version = "0.1.0"
description = "Автоматизированная система 3D-сканирования для аддитивного производства"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "pybind11>=2.12",
]

# Тяжёлые/платформо-зависимые зависимости — ставить вручную.
# open3d поддерживает Python ≤ 3.12; на 3.13 установить из нightly:
#   pip install open3d --pre
[project.optional-dependencies]
mesh = [
    "scipy>=1.12",
    "open3d>=0.18",       # Python ≤ 3.12; для 3.13 использовать --pre
    "trimesh>=4.0",
    "pymeshfix>=0.16",
    "scikit-learn>=1.4",
    "numpy-stl>=3.1",
    "pillow>=10.3",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
scanner = "scanner.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
